# webshield.official

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  README.md  SECURITY_AUDIT_REPORT.md  alembic.ini  backend_test.py  coverage.xml  docker-compose.yml  env_template.txt  gmail.md  mypy.ini  nginx.conf  performance_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements-production.txt  requirements-runtime.txt  requirements-security.txt  requirements.txt  start_server.py  test_chart_output.txt  update_courses.py  watchdog.py
Mobileapp/: app.css  app.js  index.html
alembic/: env.py
backend/: __init__.py  api_routes.py  app.py  auth.py  auth_checker.py  celery_app.py  celery_tasks.py  chatbot_assistant.py  chatbot_routes.py  config.py  db.py  email_routes.py  export.py  frontend_routes.py  jwt_auth.py  llm_service.py  logger_config.py  models.py  monitoring.py  performance_config.py  reports_routes.py  routes.py  scan.py  security.py  server.py  translation_routes.py  translation_service.py  utils.py  validators.py
documentation/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md
extension/: background.js  blocked.html  content.js  gmail-scanner.css  gmail-scanner.js  manifest.json  options.html  options.js  popup.html  popup.js  readme.md  storage-utils.js  style.css
frontend/: about.html  accessibility-enhancements.js  alerts.html  analytics.html  api-settings.html  bulk-scan.html  chatbot-styles.css  chatbot.html  chatbot.js  config.js  cyber-effects.js  dashboard.html  index.html  (+27 more)
(+65 files in other folders)
